<resources>
    <string name="app_name">Dissonance</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="charts">Charts</string>
    <string name="create_review">Create Review</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="change_name">Change Name:</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="change_email">Change email:</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="change_password">Change password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="artist">Artist</string>
    <string name="album_title">Album Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="searching">Searching</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_rating_format">(%1$d)</string>
    <string name="review_username_label_format">review by @%1$s</string>
</resources>