<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00EF0D0D"
                android:backgroundTint="#C12E2E"
                android:gravity="center|start"
                android:text="@string/back"
                app:icon="?attr/homeAsUpIndicator"
                app:iconPadding="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="252dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#FDFDFD"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/editNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/change_name"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editNameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter new name"
                android:background="@drawable/btn_profile"
                android:hint="@string/enter_new_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#898888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_email"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editEmailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter new name"
                android:background="@drawable/btn_profile"
                android:hint="@string/enter_new_email"
                android:inputType="textPersonName" />

        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#898888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editEmailText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editEmailBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="Enter new name"
                android:background="@drawable/btn_profile"
                android:hint="@string/enter_new_password"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>